[package]
name = "cwebp_docker_api"
version = "0.0.1"
edition = "2024"
authors = ["aspnmy <aspnmy@e2bank.cn>"]
description = "A lightweight cwebp API service built with Rust and Actix Web"
repository = "https://github.com/aspnmy/cwebp_docker_api"
license = "MIT"

[dependencies]
actix-web = "4"
actix-multipart = "0.4"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
base64 = "0.21"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
futures-util = "0.3"
